--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -59,7 +59,7 @@ server {
 
     # Site Name & Directory
     server_name         www.decalicious.com;
-    root               /usr/share/nginx/sites/decalicious-down/;
+    root                /usr/share/nginx/sites/decalicious-down/;
 
     # SSL Settings (with SPDY 2)
     ssl                        on;
@@ -408,6 +408,228 @@ server {
 
 
 
+
+
+# ----------------------------------------------------
+#       WWW.DECALICIOUS.COM  NO SSL REDIRECT         - 
+# ----------------------------------------------------
+server {
+
+    # Site Name & Directory
+    server_name         www.decalicious.com decalicious.com x.decalicious.com frank.decalicious.com;
+    root                /usr/share/nginx/sites/decalicious-down/;
+    listen              80;
+
+    # Server Performance Settings
+    keepalive_timeout  30s;
+    allow              all;
+    server_tokens      off;
+
+    # PREVENT SCRAPING
+    if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+
+    # LOCATION >>
+    # MAIN SITE LOCATION 
+    location / {
+
+        # turn on SSL for all requests..
+        if ($ssl_protocol = "") {
+            rewrite ^   http://$server_name$request_uri? permanent;
+            break;
+        }
+    }
+
+
+    # LOCATION >>
+    # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
+    location = /blog {
+        rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
+        break;
+    }
+
+    # LOCATION >>
+    # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
+    location ~* ^/blog/(.*) {
+
+        # Make sure blog is only available under www domain
+        if ( $host != 'www.decalicious.com' ) {
+            rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+            break;
+        }
+
+        # Turn off SSL for Blog
+        if ($ssl_protocol != "") {
+            rewrite ^   http://$server_name$request_uri? permanent;
+            break;
+        }
+
+        # Dont Allow Robots.txt to work since Blogger Version Is Wrong
+        location ~* ^/blog/robots.txt {
+            deny all;
+        }
+
+        # Intercept Errors
+        proxy_intercept_errors on;
+        error_page 500 502 503 504 =503 /maintenance.html;
+    break;
+    }
+
+
+    # LOCATION >>
+    # DECALICIOUS.com/X/S3 (S3 Bucket Decalicious) **** 
+    location ~* ^/x/s3/(.*) {
+
+        # Set Variables for our S3 Bucket Name
+        set $s3_bucket           'decalicious.s3.amazonaws.com';
+        set $url_full            '$1';
+
+        # Additional Headers
+        more_set_headers          "Server: DECALS-S3";
+        add_header                Cache-Control "no-transform,public,max-age=36720000, s-maxage=262800";
+        etag                      on;
+        expires                   425d;
+
+        # Cache File Information
+        open_file_cache           max=1000 inactive=500s;
+        open_file_cache_valid     600s;
+        open_file_cache_errors    on;
+
+        # Gzip
+        gzip                      on;
+        gzip_vary                 on;
+        gzip_http_version         1.0;
+        gzip_disable              "MSIE [1-6].(?!.*SV1)";
+        gzip_min_length           350;
+        gzip_buffers              64 8k;
+        gzip_comp_level           3;
+        gzip_proxied              any;
+        gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript font/ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
+
+        # Proxy Settings
+        proxy_set_header          Accept-Encoding "";
+        proxy_http_version        1.1;
+        proxy_redirect            off;
+        proxy_set_header          Host $s3_bucket;
+        proxy_set_header          Authorization '';
+        proxy_hide_header         x-amz-id-2;
+        proxy_hide_header         x-amz-request-id;
+        proxy_hide_header         x-amz-meta-tag;
+        proxy_hide_header         x-amz-meta-uuid;
+        proxy_hide_header         Set-Cookie;
+        proxy_ignore_headers      "Set-Cookie";
+        proxy_buffering           off;
+        resolver                  8.8.4.4 8.8.8.8 valid=300s;
+        resolver_timeout          10s;
+        proxy_pass                http://$s3_bucket/$url_full;
+        proxy_temp_path           /usr/share/nginx/temp;
+
+        # Proxy Caching
+        proxy_cache               STATIC;
+        proxy_cache_valid         200 302 1d;
+        proxy_cache_valid         404     1m;
+        proxy_cache_use_stale     error timeout invalid_header updating
+        http_500 http_502 http_503 http_504;
+
+        # Intercept Errors
+        proxy_intercept_errors on; 
+        error_page 500 502 503 504 =503 /maintenance.html;
+        error_page 404 =404 /404.html; 
+
+    }
+
+    # LOCATION >>
+    # DECALICIOUS.com/x/
+    # DECALICIOUS.com/app/
+    # DECALICIOUS.com/w3c/
+    # DECALICIOUS.com/favicon.ico
+    # DECALICIOUS.com/p3p.xml
+    # DECALICIOUS.com/apple-touch-icon-144x144.png
+
+    location ~* /(x/|app/|w3c/|favicon.ico|p3p.xml|apple-touch-icon-144x144.png) {
+
+        # Additional Headers
+        more_set_headers          "Server: DECALS-X";
+        add_header                Cache-Control "no-transform,public,max-age=36720000";
+        etag                      on;
+        expires                   425d;
+
+        # Cache File Information
+        open_file_cache           max=1000 inactive=500s;
+        open_file_cache_valid     600s;
+        open_file_cache_errors    on;
+
+        # Gzip
+        gzip                      on;
+        gzip_vary                 on;
+        gzip_http_version         1.0;
+        gzip_disable              "MSIE [1-6].(?!.*SV1)";
+        gzip_min_length           350;
+        gzip_buffers              64 8k;
+        gzip_comp_level           3;
+        gzip_proxied              any;
+        #gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript font/ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
+
+
+        # Proxy Settings
+        proxy_http_version        1.1;
+        proxy_redirect            off;
+        proxy_set_header          Host              $http_host;
+        proxy_set_header          X-Real-IP         $remote_addr;
+        proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header          X-Forwarded-Proto $scheme;
+        proxy_pass                http://iis-servers-decalicious;
+        proxy_temp_path           /usr/share/nginx/temp;
+        proxy_connect_timeout    5;
+        proxy_read_timeout       240;
+
+        # Proxy Caching
+        proxy_cache               STATIC;
+        proxy_cache_valid         200 302 1d;
+        proxy_cache_valid         404     1m;
+        proxy_cache_use_stale     error timeout invalid_header updating
+        http_500 http_502 http_503 http_504;
+
+    break;
+    }
+
+
+
+    # ERROR - MAINTENANCE 
+    location  ^~ /maintenance.html {
+        root   /usr/share/nginx/sites/decalicious-down/;
+        index  maintenance.html index.html index.htm;
+        allow all;
+    }
+
+    # ERROR - PAGE NOT FOUND
+    location  ^~ /404.html {
+        root   /usr/share/nginx/sites/decalicious-down/;
+        index  404.html index.html index.htm;
+        allow all;
+    }
+
+    # ERROR - ERROR PAGE SCRIPTS 
+        location /xs {
+        root   /usr/share/nginx/sites/decalicious-down/;
+        allow  all;
+    }
+
+    #  ERROR - PAGES FOR LOCAL REQUESTS 
+    error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
+    error_page 500 502 503 504 =503 /usr/share/nginx/sites/decalicious-down/maintenance.html;
+
+
+    # LOGGING - OFF
+        #access_log          /dev/null;
+        #error_log           /dev/null;
+    # LOGGING - CRITICAL
+        #error_log           /var/log/nginx/decalicious-error.log crit;
+        #access_log          /var/log/nginx/decalicious.log ;
+    # LOGGING - DEBUG
+        error_log           /var/log/nginx/decalicious-error.log debug;
+        access_log          /var/log/nginx/decalicious.log ;
+}
 
 
 
