--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -434,7 +434,7 @@ server {
 
         # turn on SSL for all requests..
         if ($ssl_protocol = "") {
-            rewrite ^   http://$server_name$request_uri? permanent;
+            rewrite ^   https://$server_name$request_uri? permanent;
             break;
         }
     }
