--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -449,28 +449,82 @@ server {
 
     # LOCATION >>
     # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
+   location = /blog {
+      #Remove Trailing Slashes
+      rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
+      break;
+    }
+
+    # LOCATION >>
+    # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
 
         # Make sure blog is only available under www domain
         if ( $host != 'www.decalicious.com' ) {
             rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
-            break;
+        break;
         }
 
         # Turn off SSL for Blog
         if ($ssl_protocol != "") {
             rewrite ^   http://$server_name$request_uri? permanent;
-            break;
+        break;
         }
 
-        # Dont Allow Robots.txt to work since Blogger Version Is Wrong
         location ~* ^/blog/robots.txt {
             deny all;
         }
 
-        # Intercept Errors
-        proxy_intercept_errors on;
-        error_page 500 502 503 504 =503 /maintenance.html;
+        # Rewrite outbound text to new url | rewrite https for image sources
+        subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
+
+        # Variables so we can redirect later
+        set $blog_url            'blog.decalicious.com';
+        set $url_full            '$1';
+
+        # HEADERS
+        more_set_headers          "Server: DECALS-BL";
+        add_header                Cache-Control "public, max-age=3600";
+        etag                      on;
+        expires                   1h;
+
+        # Cache File Information
+        open_file_cache           max=1000 inactive=500s;
+        open_file_cache_valid     600s;
+        open_file_cache_errors    on;
+
+        # Gzip
+        gzip                      on;
+        gzip_vary                 on;
+        gzip_http_version         1.0;
+        gzip_disable              "MSIE [1-6].(?!.*SV1)";
+        gzip_min_length           200;
+        gzip_buffers              64 8k;
+        gzip_comp_level           3;
+        gzip_proxied              any;
+        gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+        # PROXY SETTINGS
+        proxy_set_header          Accept-Encoding "";
+        proxy_http_version        1.1;
+        proxy_redirect            off;
+        proxy_set_header          Host $blog_url;
+        proxy_set_header          Authorization '';
+        proxy_hide_header         Set-Cookie;
+        proxy_ignore_headers      "Set-Cookie";
+        proxy_buffering           off;
+        resolver                  8.8.4.4 8.8.8.8 valid=300s;
+        resolver_timeout          10s;
+        proxy_pass                http://$blog_url/$url_full;
+        proxy_temp_path           /usr/share/nginx/temp;
+
+        # PROXY CACHING
+        proxy_cache               STATIC;
+        proxy_cache_valid         200 302 1d;
+        proxy_cache_valid         404     1m;
+        proxy_cache_use_stale     error timeout invalid_header updating
+        http_500 http_502 http_503 http_504;
+
     break;
     }
 
