--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -214,6 +214,32 @@ server {
    }
 
 
+    # LOCATION >>
+    # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
+    location ~* ^/blog/(.*) {
+
+        # Make sure blog is only available under www domain
+        if ( $host != 'www.decalicious.com' ) {
+            rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+            break;
+        }
+
+        # Turn off SSL for Blog
+        if ($ssl_protocol != "") {
+            rewrite ^   http://$server_name$request_uri? permanent;
+            break;
+        }
+
+        # Dont Allow Robots.txt to work since Blogger Version Is Wrong
+        location ~* ^/blog/robots.txt {
+            deny all;
+        }
+
+        # Intercept Errors
+        proxy_intercept_errors on;
+        error_page 500 502 503 504 =503 /maintenance.html;
+    break;
+    }
 
 
     # LOCATION >>
