--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -315,7 +315,7 @@ server {
     # DECALICIOUS.com/p3p.xml
     # DECALICIOUS.com/apple-touch-icon-144x144.png
 
-    location ~* /(x/|app/|w3c/|favicon.ico|p3p.xml|apple-touch-icon-144x144.png) {
+    location ~* /(x/|app/|w3c/|favicon\.ico|p3p\.xml|apple-touch-icon-144x144\.png) {
 
         # Additional Headers
         more_set_headers          "Server: DECALS-X";
@@ -576,7 +576,7 @@ server {
     # DECALICIOUS.com/p3p.xml
     # DECALICIOUS.com/apple-touch-icon-144x144.png
 
-    location ~* /(x/|app/|w3c/|favicon.ico|p3p.xml|apple-touch-icon-144x144.png) {
+    location ~* /(x/|app/|w3c/|favicon\.ico|p3p\.xml|apple-touch-icon-144x144\.png) {
 
         # Additional Headers
         more_set_headers          "Server: DECALS-X";
@@ -648,8 +648,9 @@ server {
 
 
     # LOCATION >>
-    # MAIN SITE LOCATION 
-    location / {
+    # MAIN SITE LOCATION REQUIRES SSL
+    #location / {
+    location ~ ^/(?!(blog/|no-ssl)) {
 
         # turn on SSL for all requests..
         if ($ssl_protocol = "") {
