--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,22 +102,8 @@ server {
     # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
     location ~* ^/blog/(.*) {
 
-        # Make sure blog is only available under www domain
-        if ( $host != 'www.decalicious.com' ) {
-            rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
-            break;
-        }
-
-        # Turn off SSL for Blog
-        if ($ssl_protocol != "") {
-            rewrite ^   http://$server_name$request_uri? permanent;
-            break;
-        }
-
-        # Dont Allow Robots.txt to work since Blogger Version Is Wrong
-        location ~* ^/blog/robots.txt {
-            deny all;
-        }
+        # Redirect to http version as www subomain (blog only available under www)
+        rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
 
         # Intercept Errors
         proxy_intercept_errors on;
