--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -100,10 +100,11 @@ server {
 
     # LOCATION >>
     # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
-    location ~* ^/blog/(.*) {
+    location ~* ^/blog(.*) {
 
+        more_set_headers  "X-REDIRECT:THIS IS WRONG";
         # Redirect to http version as www subomain (blog only available under www)
-        rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+        # rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
 
         # Intercept Errors
         proxy_intercept_errors on;
@@ -424,7 +425,8 @@ server {
 
         # Make sure blog is only available under www domain
         if ( $host != 'www.decalicious.com' ) {
-            rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+            more_set_headers "X-STATUS: Right-URL-WRONGREDIRECT"
+            #rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
         break;
         }
 
