--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,13 +102,12 @@ server {
     # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
     location ~* ^/blog(.*) {
 
-        more_set_headers  "X-REDIRECT:THIS IS WRONG";
-        # Redirect to http version as www subomain (blog only available under www)
-        # rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+        return 301 http://www.website.com$request_uri;
 
         # Intercept Errors
-        proxy_intercept_errors on;
+        proxy_intercept_errors on; 
         error_page 500 502 503 504 =503 /maintenance.html;
+        error_page 404 =404 /404.html; 
     break;
     }
 
