--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,7 +102,7 @@ server {
     # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
     location ~* ^/blog(.*) {
 
-        return 301 http://www.website.com$request_uri;
+        return 301 http://www.decalicious.com$request_uri;
 
         # Intercept Errors
         proxy_intercept_errors on; 
