--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -414,7 +414,7 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
     location = /blog {
-        rewrite ^/(.*)$ http://www.decalicious.com/blog/ permanent;
+        return 301 http://www.decalicious.com/blog/?redirected;
         break;
     }
 
@@ -423,11 +423,11 @@ server {
     location ~* ^/blog/(.*) {
 
         # Make sure blog is only available under www domain
-        if ( $host != 'www.decalicious.com' ) {
-            more_set_headers "X-STATUS: Right-URL-WRONGREDIRECT"
-            #rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
-        break;
-        }
+  #      if ( $host != 'www.decalicious.com' ) {
+  #          more_set_headers "X-STATUS: Right-URL-WRONGREDIRECT"
+  #          #rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+  #      break;
+  #      }
 
         location ~* ^/blog/robots.txt {
             deny all;
