--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,7 +102,7 @@ server {
     # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
     location ~* ^/blog(.*) {
 
-        return 301 http://www.decalicious.com$request_uri;
+        return 301 http://www.decalicious.com$request_uri?ssl=false;
 
         # Intercept Errors
         proxy_intercept_errors on; 
@@ -414,7 +414,7 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
     location = /blog {
-        return 301 http://www.decalicious.com/blog/?redirected;
+        return 301 http://www.decalicious.com/blog/?Decalicious.com;
         break;
     }
 
