Fix blog headers

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -442,7 +442,11 @@ server {
         set $url_full            '$1';
 
         # HEADERS
+
+
         more_set_headers          "Server: DECALS-BL";
+        more_clear_headers        'Cache-Control-*';
+        more_clear_headers        'Alternate-Protocol*';
         add_header                Cache-Control "public, max-age=3600";
         etag                      on;
         expires                   1h;
