--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -475,7 +475,7 @@ server {
         proxy_set_header          Host $blog_url;
         proxy_set_header          Authorization '';
         proxy_hide_header         Set-Cookie;
-        proxy_ignore_headers      "Set-Cookie";
+        proxy_ignore_headers      "Cache-Control Expires Set-Cookie";
         proxy_buffering           off;
         resolver                  8.8.4.4 8.8.8.8 valid=300s;
         resolver_timeout          10s;
