--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -445,7 +445,7 @@ server {
         # HEADERS
 
 
-        more_set_headers          "Server: DECALS-BL";
+        more_set_headers          "Server: DECALS-BLOGGER";
         more_clear_headers        'Cache-Control-*';
         more_clear_headers        'Alternate-Protocol*';
         add_header                Cache-Control "public, max-age=7200";
