--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -62,8 +62,8 @@ server {
     root                /usr/share/nginx/sites/decalicious-down/;
 
     # SSL Settings (with SPDY 2)
+    listen                     443 spdy default_server;
     ssl                        on;
-    listen                     443 ssl spdy default_server;
     ssl_session_timeout        15m;
     ssl_protocols              SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers                RC4:HIGH:!aNULL:!MD5;
