--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -99,17 +99,17 @@ server {
 
 
     # LOCATION >>
-    # DECALICIOUS.com/BLOG/ (KILL SSL CONNECTION) 
-    location ~* ^/blog(.*) {
-
-        return 301 http://www.decalicious.com$request_uri?ssl=false;
-
-        # Intercept Errors
-        proxy_intercept_errors on; 
-        error_page 500 502 503 504 =503 /maintenance.html;
-        error_page 404 =404 /404.html; 
-    break;
+    # NON SSL LOCATIONS
+    if ($server_port = 443) {
+        location ~* ^/blog(.*) {
+            rewrite ^ http://$host$request_uri permanent;
+        }
+        location ~* ^/no-ssl(.*) {
+            rewrite ^ http://$host$request_uri permanent;
+        }
     }
+
+
 
 
 
