--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -100,12 +100,10 @@ server {
 
     # LOCATION >>
     # NON SSL LOCATIONS
-    if ($server_port = 443) {
-        location ~* ^/blog(.*) {
-            rewrite ^ http://$host$request_uri permanent;
-        }
-        location ~* ^/no-ssl(.*) {
-            rewrite ^ http://$host$request_uri permanent;
+    location ~* ^/blog(.*) {
+        if ($server_port = 80) {
+          rewrite ^ http://$host$request_uri permanent;
+          break;
         }
     }
 
