--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,7 +102,7 @@ server {
     # NON SSL LOCATIONS
     location ~* ^/blog(.*) {
         if ($server_port = 443) {
-          rewrite ^ http://$host$request_uri permanent;
+          rewrite ^ http://www.decalicious.com/blog$1;
           break;
         }
     }
