--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,9 +102,11 @@ server {
     # NON SSL LOCATIONS
     location ~* ^/blog(.*) {
         if ($server_port = 443) {
-          rewrite ^ http://www.decalicious.com/blog$1;
+          #rewrite ^ http://www.decalicious.com/blog$1;
+          more_set_headers "http://www.decalicious.com/blog$1"
           break;
         }
+        break;
     }
 
 
