--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -103,7 +103,7 @@ server {
     location ~* ^/blog(.*) {
         if ($server_port = 443) {
           #rewrite ^ http://www.decalicious.com/blog$1;
-          more_set_headers "http://www.decalicious.com/blog$1"
+          return 301 http://www.decalicious.com$request_uri;
           break;
         }
         break;
