--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,8 +102,7 @@ server {
     # NON SSL LOCATIONS
     location ~* ^/blog(.*) {
         if ($server_port = 443) {
-          #rewrite ^ http://www.decalicious.com/blog$1;
-          return 301 http://www.decaliciousxx.com$request_uri;
+          return 301 http://www.decalicious.com$request_uri;
           break;
         }
         break;
@@ -333,7 +332,7 @@ server {
         proxy_set_header          Host              $http_host;
         proxy_set_header          X-Real-IP         $remote_addr;
         proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header          X-Forwarded-Proto $scheme;
+        #proxy_set_header          X-Forwarded-Proto $scheme;
         proxy_pass                http://iis-servers-decalicious;
         proxy_temp_path           /usr/share/nginx/temp;
         proxy_connect_timeout    5;
