--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -413,7 +413,7 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
     location = /blog {
-        return 301 http://www.decalicious.com/blog/?Decalicious.com;
+        return 301 http://www.decalicious.com/blog/;
         break;
     }
 
