--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,7 +102,7 @@ server {
     # NON SSL LOCATIONS
     location ~* ^/blog(.*) {
         if ($server_port = 443) {
-          return 301 http://www.decalicious.com/blog/;
+          return 301 http://blog.decalicious.com/;
           break;
         }
         break;
