Map Locations SSL

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -1,5 +1,16 @@
 # NGINX CONFIGURATION NGINX
 
+#MAPPING FOR DIRECTORIES WHICH REQUIRE SSL
+class="code">map $uri $preferred_protocol {
+  default "https";
+  ~^/(images|css|javascript)/ "none";
+  ~^/blog/ "http";
+  ~^/ssl/ "https";
+}
+
+
+
+
 # -------------------------------------
 #     TYPO DOMAIN NAMES - REDIRECT    -
 #--------------------------------------
@@ -84,8 +95,13 @@ server {
     allow              all;
     server_tokens      off;
 
-    # PREVENT SCRAPING
+    # Prevent Scapers
     if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+
+    # Protocol Map Rewrites 
+    if ($preferred_protocol = "http") {
+      return 301 http://www.decalicious.org$request_uri;
+    }
 
     # LOCATION >>
     # IIS FARM DASHBOARD
@@ -96,21 +112,6 @@ server {
         # deny all;
         allow all;
     }
-
-
-    # LOCATION >>
-    # NON SSL LOCATIONS
-    location ~* ^/blog(.*) {
-        if ($server_port = 443) {
-          return 301 http://blog.decalicious.com/;
-          break;
-        }
-        break;
-    }
-
-
-
-
 
     # LOCATION >>
     # MAIN SITE LOCATION 
@@ -406,9 +407,13 @@ server {
     allow              all;
     server_tokens      off;
 
-    # PREVENT SCRAPING
+    # Prevent Scapers
     if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
 
+    # Protocol Map Rewrites 
+    if ($preferred_protocol = "https") {
+      return 301 https://www.decalicious.org$request_uri;
+    }
 
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
@@ -424,15 +429,6 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
-
-        # Make sure blog is only available under www domain
-  #      if ( $host != 'www.decalicious.com' ) {
-  #          more_set_headers "X-STATUS: Right-URL-WRONGREDIRECT"
-  #          #rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
-  #      break;
-  #     }
-  #
-
 
         # Rewrite outbound text to new url | rewrite https for image sources
         subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
