--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -1,6 +1,8 @@
 # NGINX CONFIGURATION NGINX
 
-#MAPPING FOR DIRECTORIES WHICH REQUIRE SSL
+# -------------------------------------
+#     PREFERRED PROTOCOL MAPPING      -
+#--------------------------------------
 class="code">map $uri $preferred_protocol {
   default "https";
   ~^/(images|css|javascript)/ "none";
