--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -419,10 +419,9 @@ server {
 
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
-    location = /blog {
-        return 301 http://www.decalicious.com/blog/;
-        break;
-    }
+#    location = /blog {
+#        return 301 http://www.decalicious.com/blog/;
+#    }
 
     location ~* ^/blog/robots.txt {
         deny all;
