--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -3,7 +3,7 @@
 # -------------------------------------
 #     PREFERRED PROTOCOL MAPPING      -
 #--------------------------------------
-class="code">map $uri $preferred_protocol {
+map $uri $preferred_protocol {
   default "https";
   ~^/(images|css|javascript)/ "none";
   ~^/blog/ "http";
