--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,7 +102,7 @@ server {
 
     # Protocol Map Rewrites 
     if ($preferred_protocol = "http") {
-      return 301 http://www.decalicious.org$request_uri;
+      return 301 http://www.decalicious.com$request_uri;
     }
 
 
@@ -417,7 +417,7 @@ server {
 
     # Protocol Map Rewrites 
     if ($preferred_protocol = "https") {
-      return 301 https://www.decalicious.org$request_uri;
+      return 301 https://www.decalicious.com$request_uri;
     }
 
     # LOCATION >>
