--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -6,7 +6,7 @@
 map $uri $preferred_protocol {
   default "https";
   ~^/(images|css|javascript)/ "none";
-  ~^/blog/ "http";
+  ~^/blog/(.*) "http";
   ~^/ssl/ "https";
 }
 
@@ -105,10 +105,6 @@ server {
 
     # Prevent Scapers
     if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
-
-
-
-
 
     # LOCATION >>
     # IIS FARM DASHBOARD
