--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,6 +102,12 @@ server {
     # MAIN SITE LOCATION 
     location / {
 
+        # Turn On SSL For Main
+        if ($ssl_protocol = "") {
+         rewrite ^   https://www.decalicious.com$request_uri? permanent;
+         break;
+        }
+
         # Additional Headers
         more_set_headers          "Server: DECALS";
         add_header                Cache-Control "public, max-age=60";
