--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -153,6 +153,8 @@ server {
         proxy_intercept_errors on;
         error_page 500 502 503 504 =503 /maintenance.html;
 
+        break;
+
     }
 
     # LOCATION >>
