--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -161,15 +161,18 @@ server {
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
     location = /blog {
         return 301 http://www.decalicious.com/blog/;
+        break;
     }
 
-    location ~* ^/blog/robots.txt {
+    location = /blog/robots.txt {
         deny all;
+        break;
     }
 
     # LOCATION >>
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
-    location ~* ^/blog/(.*) {
+    #location ~* ^/blog/(.*) {
+    location ~* /blog/$ {
 
 
         # Turn off SSL for Blog
@@ -304,6 +307,8 @@ server {
         proxy_intercept_errors on;
         error_page 500 502 503 504 =503 /maintenance.html;
 
+        break;
+
    }
 
 
@@ -367,6 +372,8 @@ server {
         proxy_intercept_errors on; 
         error_page 500 502 503 504 =503 /maintenance.html;
         error_page 404 =404 /404.html; 
+
+        break;
 
     }
 
