--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -165,7 +165,8 @@ server {
     }
 
     location = /blog/robots.txt {
-        deny all;
+        #deny all;
+        return 404;
         break;
     }
 
