--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -166,7 +166,7 @@ server {
 
     location = /blog/robots.txt {
         #deny all;
-        return 404;
+        internal;
         break;
     }
 
