--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -166,7 +166,7 @@ server {
 
     location = /blog/robots.txt {
         #deny all;
-        internal;
+        return 404;
         break;
     }
 
