--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -104,7 +104,7 @@ server {
 
         # Turn On SSL For Main
         if ($ssl_protocol = "") {
-         rewrite ^   https://www.decalicious.com$request_uri? permanent;
+         rewrite ^  https://www.decalicious.com$request_uri? permanent;
          break;
         }
 
@@ -172,9 +172,8 @@ server {
 
     # LOCATION >>
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
-    #location ~* ^/blog/(.*) {
-    location ~* /blog/$ {
-
+    location ~* ^/blog/(.*) {
+    
 
         # Turn off SSL for Blog
         if ($ssl_protocol != "") {
