--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -176,10 +176,10 @@ server {
     
 
         # Turn off SSL for Blog
-        if ($ssl_protocol != "") {
-         rewrite ^   http://www.decalicious.com$request_uri? permanent;
-         break;
-        }
+ #       if ($ssl_protocol != "") {
+ #        rewrite ^   http://www.decalicious.com$request_uri? permanent;
+ #        break;
+ #       }
 
         # Make sure blog is only available under www domain
         if ( $host != 'www.decalicious.com' ) {
