blog temp no ssl

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -174,12 +174,17 @@ server {
     # DECALICIOUS.com/blog (Blogger blog.decalicious.com) **** 
     location ~* ^/blog/(.*) {
     
+        # Variables so we can redirect later
+        set $blog_url            'blog.decalicious.com';
+        set $url_full            '$1';
+
 
         # Turn off SSL for Blog
- #       if ($ssl_protocol != "") {
- #        rewrite ^   http://www.decalicious.com$request_uri? permanent;
- #        break;
- #       }
+        if ($ssl_protocol != "") {
+         #rewrite ^   http://www.decalicious.com$request_uri? permanent;
+         return 302 http://www.decalicious.com/blog/$url_full;
+         break;
+        }
 
         # Make sure blog is only available under www domain
         if ( $host != 'www.decalicious.com' ) {
@@ -189,10 +194,6 @@ server {
 
         # Rewrite outbound text to new url | rewrite https for image sources
         subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
-
-        # Variables so we can redirect later
-        set $blog_url            'blog.decalicious.com';
-        set $url_full            '$1';
 
         # HEADERS
         more_set_headers          "Server: DECALS-BLOGGER";
