--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -104,7 +104,8 @@ server {
 
         # Turn On SSL For Main
         if ($ssl_protocol = "") {
-         rewrite ^  https://www.decalicious.com$request_uri? permanent;
+         #rewrite ^  https://www.decalicious.com$request_uri? permanent;
+         return 302 https://www.decalicious.com$request_uri?
          break;
         }
 
@@ -160,7 +161,7 @@ server {
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
     location = /blog {
-        return 301 http://www.decalicious.com/blog/;
+        return 302 http://www.decalicious.com/blog/;
         break;
     }
 
