Lets hope this did not break anything

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -104,8 +104,8 @@ server {
 
         # Turn On SSL For Main
         if ($ssl_protocol = "") {
-         #rewrite ^  https://www.decalicious.com$request_uri? permanent;
-         return 302 https://www.decalicious.com$request_uri?
+         rewrite ^  https://www.decalicious.com$request_uri? permanent;
+         #return 302 https://www.decalicious.com$request_uri?
          break;
         }
 
