--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -181,11 +181,11 @@ server {
 
 
         # Turn off SSL for Blog
-        if ($ssl_protocol != "") {
-         #rewrite ^   http://www.decalicious.com$request_uri? permanent;
-         return 302 http://www.decalicious.com/blog/$url_full;
-         break;
-        }
+#        if ($ssl_protocol != "") {
+#         #rewrite ^   http://www.decalicious.com$request_uri? permanent;
+#         return 302 http://www.decalicious.com/blog/$url_full;
+#         break;
+#        }
 
         # Make sure blog is only available under www domain
         if ( $host != 'www.decalicious.com' ) {
