--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,6 +102,25 @@ server {
     # MAIN SITE LOCATION 
     location / {
 
+
+        set $force_SSL HTTPS;
+        if ($ssl_protocol = "") {
+            # REQUEST WAS NOT HTTPS - FORCE SSL (UNLESS OVERRIDEN LATER)
+            set $force_SSL     TRUE; 
+        }
+        if ($host !~* "www.decalicious.com") {
+            # NOT ON WWW DOMAIN - NO NEED FOR SSL
+            set $force_SSL     FALSE; 
+        }
+
+       if ($force_SSL = TRUE) {
+         rewrite ^ https://www.decalicious.com/$request_uri? permanent; 
+         break;
+       }
+
+
+
+
         # Turn On SSL For Main
         if ($ssl_protocol = "") {
          #rewrite ^  https://www.decalicious.com$request_uri? permanent;
