Redirect to SSL when needed

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -103,21 +103,30 @@ server {
     location / {
 
 
+        # Default Value HTTPS
         set $force_SSL HTTPS;
+
+        # Change Variable to HTTP if not Secure
         if ($ssl_protocol = "") {
-            # REQUEST WAS NOT HTTPS - FORCE SSL (UNLESS OVERRIDEN LATER)
-            set $force_SSL     TRUE; 
-        }
-        if ($host !~* "www.decalicious.com") {
-            # NOT ON WWW DOMAIN - NO NEED FOR SSL
-            set $force_SSL     FALSE; 
+            set $force_SSL     HTTP; 
         }
 
-       if ($force_SSL = TRUE) {
+        # Add WD (Wrong Domain) if Not Main Domain (www.decalicious.com)
+        if ($host !~* "www.decalicious.com") {
+            set "${force_SSL}WD";
+        }
+
+        # FIX PROTOCOL - Came In Using HTTP
+       if ($force_SSL = HTTP) {
          rewrite ^ https://www.decalicious.com/$request_uri? permanent; 
          break;
        }
 
+        # FIX PROTOCOL - Came In Using HTTPS But Different SubDomain
+       if ($force_SSL = HTTPSWD) {
+         rewrite ^ http://$host/$request_uri? permanent; 
+         break;
+       }
 
 
 
