--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -113,7 +113,7 @@ server {
 
         # Add WD (Wrong Domain) if Not Main Domain (www.decalicious.com)
         if ($host !~* "www.decalicious.com") {
-            set "${force_SSL}WD";
+            set $force_SSL    "${force_SSL}WD"; 
         }
 
         # FIX PROTOCOL - Came In Using HTTP
