--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,6 +102,8 @@ server {
     # MAIN SITE LOCATION 
     location / {
 
+      # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+      # BEGIN RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
 
         # Default Value HTTPS
         set $force_SSL HTTPS;
@@ -128,9 +130,8 @@ server {
          break;
        }
 
-
-
-
+      # END RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
+      # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
         # Additional Headers
         more_set_headers          "Server: DECALS";
