--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -212,10 +212,10 @@ server {
 #        }
 
         # Make sure blog is only available under www domain
-        if ( $host != 'www.decalicious.com' ) {
-          rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
-          break;
-        }
+ #       if ( $host != 'www.decalicious.com' ) {
+ #         rewrite ^/(.*)$ http://www.decalicious.com/$1 permanent;
+ #         break;
+ #       }
 
         # Rewrite outbound text to new url | rewrite https for image sources
         subs_filter               blog.decalicious.com/ www.decalicious.com/blog/;
