--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -120,13 +120,13 @@ server {
 
         # FIX PROTOCOL - Came In Using HTTP
        if ($force_SSL = HTTP) {
-         rewrite ^ https://www.decalicious.com$request_uri? permanent; 
+         rewrite ^ https://www.decalicious.com$request_uri permanent; 
          break;
        }
 
         # FIX PROTOCOL - Came In Using HTTPS But Different SubDomain
        if ($force_SSL = HTTPSWD) {
-         rewrite ^ http://$host$request_uri? permanent; 
+         return 301 http://$host$request_uri;
          break;
        }
 
