--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -113,7 +113,7 @@ server {
             set $force_SSL     HTTP; 
         }
 
-        # Add WD (Wrong Domain) if Not Main Domain (www.decalicious.com)
+        # Append WD (Wrong Domain) to our variable when not main domain (www.decalicious.com)
         if ($host !~* "www.decalicious.com") {
             set $force_SSL    "${force_SSL}WD"; 
         }
