--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -106,29 +106,36 @@ server {
       # BEGIN RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
 
         # Default Value HTTPS
-        set $force_SSL HTTPS;
+            set $force_SSL    HTTPS;
 
         # Change Variable to HTTP if not Secure
         if ($ssl_protocol = "") {
             set $force_SSL     HTTP; 
         }
 
-        # Append WD (Wrong Domain) to our variable when not main domain (www.decalicious.com)
-        if ($host !~* "www.decalicious.com") {
-            set $force_SSL    "${force_SSL}WD"; 
+        # Append WWW to our variable when on main domain (www.decalicious.com) without SSL
+        if ($host = 'www.decalicious.com') {
+            set $force_SSL    "${force_SSL}WWW"; 
         }
 
-        # FIX PROTOCOL - Came In Using HTTP
-       if ($force_SSL = HTTP) {
-         rewrite ^ https://www.decalicious.com$request_uri permanent; 
-         break;
-       }
+        # NO SSL HERE
+#        if ($uri ~* )
 
-        # FIX PROTOCOL - Came In Using HTTPS But Different SubDomain
-       if ($force_SSL = HTTPSWD) {
-         return 301 http://$host$request_uri;
+        # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
+        if ($force_SSL = HTTPWWW) {
+         #return 301 http://$host$request_uri;
+         rewrite ^ https://www.decalicious.com$request_uri permanent;
          break;
-       }
+        }
+
+        # FIX PROTOCOL - Came In Using HTTPS NOT WWW (HTTPS)
+        if ($force_SSL = HTTPS) {
+         #return 301 http://$host$request_uri;
+         rewrite ^ http:/$host$request_uri permanent;
+         break;
+        }
+
+
 
       # END RULE GROUP TO REDIRECT TO HTTP/HTTPS PROTOCOL
       # ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
