--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -1,4 +1,14 @@
 
+#  location = /abc {} 
+#  matches the exact uri /abc
+
+#  location ~ /abc 
+#  is a regex match on the uri, meaning any uri containing /abc, you probably want: 
+
+#  location ~ ^/abc 
+#  for the uri begining with /abc
+
+
 
 # -------------------------------------
 #     TYPO DOMAIN NAMES - REDIRECT    -
@@ -116,7 +126,9 @@ server {
         }
 
         # NO SSL HERE
-#        if ($uri ~* )
+        if ($uri ~* ^/blog/ ) {
+          more_set_headers "x-location:bloggggggggg";
+        }
 
         # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
         if ($force_SSL = HTTPWWW) {
@@ -194,10 +206,10 @@ server {
 
     # LOCATION >>
     # DECALICIOUS.com/BLOG (Add Missing Slash) **** 
-    location = /blog {
-        return 302 http://www.decalicious.com/blog/;
-        break;
-    }
+ #   location = /blog {
+ #       return 302 http://www.decalicious.com/blog/;
+ #       break;
+ #   }
 
     location = /blog/robots.txt {
         #deny all;
