--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -127,8 +127,17 @@ server {
 
         # NO SSL HERE
         if ($uri ~* ^/blog/ ) {
-          more_set_headers "x-location:bloggggggggg";
+            set $force_SSL    NOSSL; 
         }
+
+        if ($force_SSL = NOSSL) {
+         #return 301 http://$host$request_uri;
+         more_set_headers   "X-TESTING: NOSSSSSSSSS";
+         break;
+        }
+
+
+#/(x/|app/|w3c/|favicon\.ico|p3p\.xml|apple-touch-icon-144x144\.png) 
 
         # FIX PROTOCOL - Came In Using HTTP but on WWW Domain ... (HTTPWWW)
         if ($force_SSL = HTTPWWW) {
