--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -132,7 +132,7 @@ server {
 
         if ($force_SSL = NOSSL) {
          #return 301 http://$host$request_uri;
-         more_set_headers   "X-TESTING: NOSSSSSSSSS";
+         add_header   X-TESTING: "NOSSSSSSSSS";
          break;
         }
 
